2006-10-26  Lars Clausen  <lars@raeder.dk>

	* app/interface.[ch]: Patch from jan@uos.de: Write the accelerator
	keys in tooltips for standard tools.

	* app/paginate_psprint.c: Patch for better printing: Reasonable
	file name, check before overwriting, re-popup if file write
	failed.  Thanks to Leon Stringer <leon.stringer@ntlworld.com> for
	this patch.

2006-10-26  Hans Breuer  <hans@breuer.org>

	* plug-ins/shape/shape-export.c : the icon export facility dependens
	on the libart-size-hack; use filter_get_by_name("png-libart") instead
	of filter_guess_export_filter(). Fixes bug #364491.

2006-10-19  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS

2006-10-16  Hans Breuer  <hans@breuer.org>

	* objects/UML/class.c : the comment wrapping was only working for
	plain ASCII, now it deals with UTF-8 (Vadim Zelenin, bug #349765)

2006-10-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in : Add 'th' (Thai) to ALL_LINGUAS.

2006-10-14  Hans Breuer  <hans@breuer.org>

	* plug-ins/vdx/vdx-import.c : don't try to print("%s", NULL). It is
	not generally supported and crashes on win32. Fixes bug #349883

	* lib/arrows.[hc] : draw hollow arrow heads with linewidth 0.0 
	correctly. Patch from Michael Duelli fixing bug #358176

	* objects/standard/arc.c : don't rely on the result of atan2(inf,inf),
	it is C-runtime dependent. Fixes infinitesimal burning of CPU cycles,
	bug #360013 and duplicates.

	* app/load_save.c : protect gstdio.h by GLIB_CHECK_VERSION
	and use the <glib/ form for installed version

2006-10-13  Hans Breuer  <hans@breuer.org>

	* objects/UML/(actor|large_package|node|note).c : use 
	element_update_connections_rectangle() instead of about 25 lines 
	of copy and pasted code

	* app/load_save.c : make it compile by defining W_OK if it is
	not there and also use '#if GLIB_CHECK_VERSION(2,8,0)' instead
	of '#ifdef GLIB_CHECK_VERSION(2,8,0)'. Strange that gcc 
	apparently compiled this
